# VOICE-Relay

./: .env.example  .gitignore  .replit  BACKEND_INTEGRATION_STATUS.md  BACKEND_TEST_REPORT.md  BACKEND_VERIFICATION_COMPLETE.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  CREATE_NEW_PR.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_FREE_TIER.md  DEPLOY_QUICK_START.md  DOCUMENTATION.md  DOCUMENTATION_CLEANUP_REPORT.md  ERROR_HANDLING_IMPROVEMENTS.md  EXAMPLES_USER_FEEDBACK.md  FINAL_HANDOFF_REPORT.md  HANDOFF_COMPLETE.txt  HANDOFF_SUMMARY.md  INTEGRATION_GUIDE.md  IOS_QUICK_START.md  IOS_SETUP.md  NODE_FORGE_ALTERNATIVES.md  PLATFORM_COMPARISON.md  PROJECT_STATUS.md  PROMPTS_INDEX.md  PROMPT_DOCUMENTATION_CLEANUP.md  PROMPT_PRECOMMIT_SKILL.md  PROMPT_TESTING_STRATEGY.md  PULL_REQUEST.md  README.md  README_HANDOFF.md  REPLIT_SETUP.md  Requirements.md  SESSION_SUMMARY.txt  TESTING.md  TESTING_STRATEGY.md  TESTING_SUMMARY.txt  (+5 more)
.claude/: settings.local.json
VoiceRelayNew/: app.json  package-lock.json  package.json
agent/: app_private_key.pem  app_public_key.pem  crypto_utils.py  encrypted_reply.txt  encrypted_work_order.txt  phase0_summary.json  temp_public_key.pem
app/: PLATFORM_COMPATIBILITY_SUMMARY.md  app.json  babel.config.js  iOS_COMPATIBILITY_REVIEW.md  metro.config.js  package-lock.json  package.json
app/android/app/: CMakeLists.txt  OnLoad.cpp  build.gradle
app/android/app/src/main/java/com/voice_relay_temp/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/res/values/: strings.xml
backend/: Dockerfile  main.py  (+3 more)
(+106 files in other folders)
